# sw_project

./: README.md  hw1.py  setup.cfg  setup.py
pip-wheel-metadata/package_katherinecdu.dist-info/: METADATA
src/package_katherinecdu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sw_project.egg-info/: PKG-INFO  SOURCES.txt
sw_project.egg-info/: PKG-INFO  SOURCES.txt
