[metadata]
name = sw_project
version = 0.0.1
author = Katherine Du
author_email = katherine.du@yale.edu
description = Smith-Waterman Algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/katherinecdu/sw_project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts =
    src/sw_project/hw1.py
python_requires = >=3.6

[options.packages.find]
where = src
